@@ -32,7 +32,7 @@ QMAKE_DEFS= DESTDIR=$(BIN_DIR) \
 DEFS= DATA_PATH=\\\"$(DATA_PATH)\\\" \
       VERSION_ID_STRING=\\\"$(VIDSTR)\\\"
 
-USE_LIBNOTIFY=1
+USE_LIBNOTIFY=0
 
 ifneq ($(USE_LIBNOTIFY),0)
 	QMAKE_DEFS += CONFIG+=libnotify
