@@ -1,4 +1,7 @@
 Version 0.1.2:
+ (2012-02-11)
+  - Use notify-send by default.
+  - Made libnotify optional and disabled by default.
   - Explicit link with gtk+-2.0. (libnotify can be used with either gtk2 or gtk3)
   - Fixed compilation error with older libnotify versions.
 
